Add wasm-bidgen proxy

--- a/apps/web-parser/static/index.html
+++ b/apps/web-parser/static/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Rust + Webpack project!</title>
+    <title>INP deserializer</title>
   </head>
   <body>
+    <h1>INP deserializer</h1>
+    <p>Paste the contents of an INP file here.</p>
+    <textarea id="inp" rows="20" cols="80"></textarea>
+    <p>Click the button to deserialize the INP file.</p>
+    <button id="deserialize">Deserialize</button>
     <script src="index.js"></script>
   </body>
 </html>
