--- a/apps/web-parser/static/index.html
+++ b/apps/web-parser/static/index.html
@@ -5,30 +5,42 @@
     <title>INP deserializer</title>
     <style>
       body, html {
-            height: 100%;
-        }
+        height: 100%;
+      }
       .container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-gap: 10px;
-            height: 70%;
-        }
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+      }
+      input[type='file'] {
+        border: 3px dashed #999;
+        padding: 140px 50px 10px 50px;
+        cursor: move;
+        position:relative;
+      }
+      input[type='file']:before {
+        content: "drag & drop your file here";
+        display: block;
+        position: absolute;
+        text-align: center;
+        top: 50%;
+        left: 50%;
+        width: 200px;
+        height: 40px;
+        margin: -25px 0 0 -100px;
+        font-size: 18px;
+        font-weight: bold;
+        color: #999;
+      }
     </style>
   </head>
   <body>
     <h1>INP deserializer</h1>
     <div class="container">
-      <div>
-          <h2>Paste the contents of an INP file here.</h2>
-          <textarea id="inp" rows="40" cols="80"></textarea>
-      </div>
-      <div>
-          <h2>Result</h2>
-          <div id="jsoneditor" style="height: 100%;"></div>
-      </div>
+        <input id="inp" type="file" />
+        <br />
+        <div id="jsoneditor"></div>
     </div>
-    <p>Click the button to deserialize the INP file.</p>
-    <button id="deserialize">Deserialize</button>
     <script src="index.js"></script>
   </body>
 </html>
